--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Prominent
+description: THE WoW Classic Guild
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+#url: https://just-the-docs.github.io
+url: https://evvy.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Join our Discord: https://github.com/just-the-docs/just-the-docs-template
